@@ -9,10 +9,10 @@ package org.elasticsearch.xpack.ml.aggs.frequentitemsets;
 
 import org.elasticsearch.plugins.Plugin;
 import org.elasticsearch.search.aggregations.BaseAggregationTestCase;
-import org.elasticsearch.xpack.ml.MachineLearning;
+import org.elasticsearch.xpack.ml.MachineLearningTests;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 import static org.elasticsearch.xpack.ml.aggs.frequentitemsets.FrequentItemSetsAggregationBuilderTests.randomFrequentItemsSetsAggregationBuilder;
 
@@ -20,7 +20,7 @@ public class FrequentItemSetsTests extends BaseAggregationTestCase<FrequentItemS
 
     @Override
     protected Collection<Class<? extends Plugin>> getExtraPlugins() {
-        return Collections.singletonList(MachineLearning.class);
+        return List.of(MachineLearningTests.TrialLicensedMachineLearning.class);
     }
 
     @Override
